# workshops

./: .gitignore  README.md  pyproject.toml
Hochfrequenz GmbH/: START_HERE.md  block1_regression.ipynb  block2_lstm_timeseries.ipynb  block3_anomaly_detection.ipynb  block4_integrated_project.ipynb  notebook_templates.md
Hochfrequenz GmbH/Shared/energy-demand/: Block 1 Regression Notebook.ipynb  Block 2 LSTM Timeseries Workshop.ipynb  Block 3 Anomaly Detection Workshop.ipynb  Block 3.1 LSTM AE.ipynb
Hochfrequenz GmbH/Shared/energy-demand/.ipynb_checkpoints/: Block 1 Regression Notebook-checkpoint.ipynb
Hochfrequenz GmbH/Shared/for-students/: Block 1 Regression Notebook.ipynb  Block 2 LSTM Timeseries Workshop.ipynb  Block 3 Anomaly Detection Workshop.ipynb
energy-demand-forecasting/: README.md
energy-demand-forecasting/docs/: data-sources-guide.md  organizer-implementation-guide.md  summary-next-steps.md  workshop-curriculum.md
energy-demand-forecasting/project/: main.py  pyproject.toml
harness-engineering/: README.md
plans/implemented/: workshops-repo-portfolio-reorganization.md
schemas/: schema_definition.ipynb
